--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@artsy/fresnel": "^3.2.1",
     "@craco/craco": "^5.9.0",
+    "@hookform/resolvers": "^2.8.8",
     "@semantic-ui-react/craco-less": "^1.2.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -12,6 +13,7 @@
     "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.30.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^3.4.1",
@@ -21,7 +23,8 @@
     "semantic-ui-css": "github:Semantic-Org/Semantic-UI-CSS#master",
     "semantic-ui-less": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "HTTPS=true craco start",
