--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
     "@artsy/fresnel": "^3.2.1",
     "@craco/craco": "^5.9.0",
     "@hookform/resolvers": "^2.8.8",
+    "@rjsf/core": "^4.2.3",
     "@semantic-ui-react/craco-less": "^1.2.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "faker": "^6.6.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.30.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^3.4.1",
+    "react-semantic-ui-datepickers": "^2.17.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
