--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@artsy/fresnel": "^3.2.1",
+    "@ckeditor/ckeditor5-build-classic": "^35.0.1",
+    "@ckeditor/ckeditor5-react": "^5.0.2",
     "@craco/craco": "^5.9.0",
     "@hookform/resolvers": "^2.8.8",
     "@rjsf/core": "^4.2.3",
@@ -11,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^0.25.0",
     "faker": "^6.6.6",
     "react": "^17.0.2",
@@ -20,12 +23,14 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^3.4.1",
     "react-semantic-ui-datepickers": "^2.17.1",
+    "react-truncate": "^2.4.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "semantic-ui-css": "github:Semantic-Org/Semantic-UI-CSS#master",
     "semantic-ui-less": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
+    "tinymce": "^6.1.2",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
   },
